
    [FIXES]

    - nth_ramanujan_* returns undef with input of 0.

    - PP code for is_polygonal with n=0 was wrong.  Fixed and refactored.

    - Some large results that used GMP are properly objectified.

    - When using GMP, native int results are no longer objectified.

    - AKS was modding a with r, since 2012.

    - is_totient(2^k) with k >= 33, found by Trizen in 2019.

    - forsquarefree and forfactored were missing a destroy.  Thanks Trizen.

    [FUNCTIONALITY AND PERFORMANCE]

    - refactor objectification.  Doesn't force.  Enable on Perl < 5.9.

    - save a nanosecond or two in 32-bit primality testing.

    - Rewrite Ramanujan prime bounds using Axler (2017).  For large values
      this is much improved.  Big speedup for large exact nth/count.

    - Approx Ramanujan prime nth and count are much more accurate.

    - Internally, approx prime counts are faster, as we don't need
      to compute RiemannR to extreme precision.

    - Faster and tighter nth_prime_upper bounds.


0.73 2018-11-15

    [ADDED]

    - inverse_totient(n)              the image of euler_phi(n)

    [FIXES]

    - Try to work around 32-bit platforms in semiprime approximations.
      Cannot reproduce on any of my 32-bit test platforms.

    - Fix RT 127605, memory use in for... iterators.


0.72 2018-11-08

    [ADDED]

    - nth_semiprime(n)                the nth semiprime
    - nth_semiprime_approx(n)         fast approximate nth semiprime
    - semiprime_count_approx(n)       fast approximate semiprime count
    - semi_primes                     as primes but for semiprimes
    - forsetproduct {...} \@a,\@b,... Cartesian product of list refs

    [FIXES]

    - Some platforms are extremely slow for is_pillai.  Speed up tests.

    - Ensure random_factored_integer factor list is sorted min->max.

    - forcomposites didn't check lastfor on every callback.

    - Sun's compilers, in a valid interpretation of the code, generated